--- a/vignettes/ShortIntro.Rnw
+++ b/vignettes/ShortIntro.Rnw
@@ -24,9 +24,9 @@
 \begin{document}
 
 <<Init_hidden,echo=FALSE,eval=T, results=hide>>=
+library(tm)
 library(tm.plugin.webmining)
 data(yahoonews)
-data(rbloggers)
 options(width = 60)
 @
  
@@ -44,7 +44,7 @@ feeds in the \proglang{XML} (\proglang{RSS}, \proglang{ATOM}) and
 \proglang{JSON} format. Additionally, retrieval and extraction of
 \proglang{HTML} documents is implemented. Numerous data sources are currently
 supported through public feeds/APIs, including Google-- and Yahoo! News,
-Reuters, New York Times, and Twitter.
+Reuters and the New York Times.
 }
 
   
@@ -53,6 +53,7 @@ After package installation we make the functionality of
 \pkg{tm.plugin.webmining} available through
 
 <<echo=T, eval=F>>=
+library(tm)
 library(tm.plugin.webmining)
 @
 
@@ -106,15 +107,15 @@ is shown below.
 
 <<echo=F, eval=T>>=
 # Little hack to restrict output width
-tm::meta(yahoonews[[1]], "Description") <- 
-		paste(substring(tm::meta(yahoonews[[1]], "Description"), 1, 70), "...", sep = "")
-tm::meta(yahoonews[[1]], "ID") <- 
-		paste(substring(tm::meta(yahoonews[[1]], "ID"), 1, 70), "...", sep = "")
-tm::meta(yahoonews[[1]], "Origin") <- 
-		paste(substring(tm::meta(yahoonews[[1]], "Origin"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "Description") <- 
+		paste(substring(meta(yahoonews[[1]], "Description"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "ID") <- 
+		paste(substring(meta(yahoonews[[1]], "ID"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "Origin") <- 
+		paste(substring(meta(yahoonews[[1]], "Origin"), 1, 70), "...", sep = "")
 @
 <<echo=T, eval=T>>=
-tm::meta(yahoonews[[1]])
+meta(yahoonews[[1]])
 @
 
 For a Yahoo! News \class{TextDocument} we get useful meta--data like
@@ -124,7 +125,7 @@ For a Yahoo! News \class{TextDocument} we get useful meta--data like
 
 <<echo=F, eval=T>>=
 # Little hack to restrict output length
-tm::Content(yahoonews[[1]]) <- 
+Content(yahoonews[[1]]) <- 
 		paste(substring(yahoonews[[2]], 1, 100), "...", sep = "")
 @
 <<echo=T, eval=T>>=
@@ -161,7 +162,6 @@ googlefinance <- WebCorpus(GoogleFinanceSource("NASDAQ:MSFT"))
 googlenews <- WebCorpus(GoogleNewsSource("Microsoft"))
 nytimes <- WebCorpus(NYTimesSource("Microsoft", appid = nytimes_appid))
 reutersnews <- WebCorpus(ReutersNewsSource("businessNews"))
-twitter <- WebCorpus(TwitterSource("Microsoft"))
 yahoofinance <- WebCorpus(YahooFinanceSource("MSFT"))
 yahooinplay <- WebCorpus(YahooInplaySource())
 yahoonews <- WebCorpus(YahooNewsSource("Microsoft"))
@@ -185,76 +185,6 @@ yahoonews <- corpus.update(yahoonews)
 To continously update a \class{WebCorpus} a scheduled task/cron job could be set
 up which runs \fkt{corpus.update} in a script.
 \newpage
-
-\section{Google Reader for more data}
-A main limitation of most data feeds is the little number of items per
-feed. 20--100 items are barely enough for more serious text mining research.
-Continously updating corpora (e.g. by using \fkt{corpus.update}) can be a quite
-time consuming task if a lot of history needs to be generated immediately. \\
-At this point the Google Reader API comes into play. Google stores the histories
-of numerous news feeds for its Google Reader
-application. Accessing any feed through the provided Google
-Reader API can result in a much larger number of content items.  To get access
-to the Google Reader API one first needs to retrieve  an authentification token
-from Google (using a standard Google account):
-
-<<echo=T, eval=F>>=
-token <- auth.google.reader(email="<username>@gmail.com", password="<password>")
-@
-With the retrieved token string it is possible to get the content of any
-web-feed through the Google--Reader API.
-We can, for example,  retrieve the content of the R-Bloggers feed with the
-command:
-
-<<echo=T, eval=F>>=
-rbloggers <- WebCorpus(GoogleReaderSource("http://feeds.feedburner.com/RBloggers", token, 
-				params = list(n = 1000)))
-@
-
-Depending on the internet connection and number of items, this command can take
-quite a while. For larger requests and richer user feedback it is better
-to set the \code{verbose} option \code{TRUE}. Further we recommend to build
-an empty corpus first, without downloading any main content items. That way we
-can first check if the feed throught the Google Reader API is available and
-makes sense for our research purposes.
-By simply setting the \class{WebSource}'s \code{\$postFUN}\footnote{specifies a
-function to be called after corpus generation. Typically set to retrieve main
-content items.} field to \code{NULL}, we build a corpus only consisting of meta
-data:
-
-<<echo=T, eval=F>>=
-rbloggers <- WebCorpus(GoogleReaderSource("http://feeds.feedburner.com/RBloggers", token, 
-				params = list(n = 1000)), postFUN = NULL)
-@
-
-The number of items retrieved and the histogram of meta--\code{DateTimeStamp}s
-gives us information about the size and the update frequency of the feed. 
-Figure~\ref{fig:rbloggers} shows the histogram for the feed.
-
-<<echo=T, eval=T, fig=T>>=
-length(rbloggers)
-rbloggers.dates <- do.call(c,lapply(rbloggers, tm::meta, "DateTimeStamp"))
-hist(rbloggers.dates, breaks = "weeks", col = "grey", freq=T,
-		main = "Weekly Histogram of R-Bloggers")
-@
-
-\begin{figure}[t!]
-\begin{center}
-  \includegraphics[width=0.5\textwidth]{webmining-016}
-  \caption{Weekly histogram of DateTimeStamps from R-Bloggers corpus metadata.}
-  \label{fig:rbloggers}
-\end{center}
-\end{figure}
-
-We can therefore start to download the
-entire feed with the \code{verbose} option enabled:
-
-<<echo=T, eval=F>>=
-options(verbose = TRUE)
-rbloggers <- WebCorpus(GoogleReaderSource("http://feeds.feedburner.com/RBloggers", token,
-				params = list(n = 1000)))
-@
-
 
 \section{Conclusion}
 This vignette has given a short introduction to \pkg{tm.plugin.webmining}, a
