--- a/vignettes/ShortIntro.Rnw
+++ b/vignettes/ShortIntro.Rnw
@@ -107,12 +107,12 @@ is shown below.
 
 <<echo=F, eval=T>>=
 # Little hack to restrict output width
-meta(yahoonews[[1]], "Description") <- 
-		paste(substring(meta(yahoonews[[1]], "Description"), 1, 70), "...", sep = "")
-meta(yahoonews[[1]], "ID") <- 
-		paste(substring(meta(yahoonews[[1]], "ID"), 1, 70), "...", sep = "")
-meta(yahoonews[[1]], "Origin") <- 
-		paste(substring(meta(yahoonews[[1]], "Origin"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "description") <- 
+		paste(substring(meta(yahoonews[[1]], "description"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "id") <- 
+		paste(substring(meta(yahoonews[[1]], "id"), 1, 70), "...", sep = "")
+meta(yahoonews[[1]], "origin") <- 
+		paste(substring(meta(yahoonews[[1]], "origin"), 1, 70), "...", sep = "")
 @
 <<echo=T, eval=T>>=
 meta(yahoonews[[1]])
@@ -125,8 +125,8 @@ For a Yahoo! News \class{TextDocument} we get useful meta--data like
 
 <<echo=F, eval=T>>=
 # Little hack to restrict output length
-Content(yahoonews[[1]]) <- 
-		paste(substring(yahoonews[[2]], 1, 100), "...", sep = "")
+content(yahoonews[[1]]) <- 
+		paste(substring(yahoonews[[1]], 1, 100), "...", sep = "")
 @
 <<echo=T, eval=T>>=
 yahoonews[[1]]
